--- a/config/zones/DE.yaml
+++ b/config/zones/DE.yaml
@@ -602,10 +602,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.6353
+    - datetime: '2021-01-01'
+      value: 0.6219
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4941
+    - datetime: '2021-01-01'
+      value: 0.4794
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
