--- a/config/zones/FR.yaml
+++ b/config/zones/FR.yaml
@@ -617,10 +617,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.9304
+    - datetime: '2021-01-01'
+      value: 0.9281
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2493
+    - datetime: '2021-01-01'
+      value: 0.23
 parsers:
   consumption: FR.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
