--- a/config/zones/JP.yaml
+++ b/config/zones/JP.yaml
@@ -192,9 +192,13 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
 region: Asia
 sources:
