--- a/config/zones/US-MIDW-LGEE.yaml
+++ b/config/zones/US-MIDW-LGEE.yaml
@@ -450,9 +450,13 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
 parsers:
   consumption: EIA.fetch_consumption
