--- a/config/zones/AU-NSW.yaml
+++ b/config/zones/AU-NSW.yaml
@@ -345,13 +345,23 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2021-01-01'
+      value: 0.4608
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1798
+    - datetime: '2021-01-01'
+      value: 0.2579
 isRenewable:
+  battery discharge:
+    - datetime: '2021-01-01'
+      value: 0.4608
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1798
+    - datetime: '2021-01-01'
+      value: 0.2579
 parsers:
   consumptionForecast: AEMO.fetch_consumption_forecast
   price: OPENNEM.fetch_price
