--- a/config/zones/AU-WA-RI.yaml
+++ b/config/zones/AU-WA-RI.yaml
@@ -129,10 +129,14 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2338
+    - datetime: '2021-01-01'
+      value: 0.2342
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2338
+    - datetime: '2021-01-01'
+      value: 0.2342
 parsers:
   production: ajenti.fetch_production
 region: Oceania
