--- a/config/zones/CA-AB.yaml
+++ b/config/zones/CA-AB.yaml
@@ -17,7 +17,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 385.87
+        value: 385.61
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
@@ -35,14 +35,15 @@ emissionFactors:
         source: Electricity Maps, 2025 zone average
         value: 283.86
     unknown:
-      source: assumes 50% coal and 50% natural gas from Battle River dual fuel power plant
+      source: assumes 50% coal and 50% natural gas from Battle River dual fuel power
+        plant
       value: 565
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; National Laboratory of the Rockies
-        value: 418.87
+        value: 418.61
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; National Laboratory of the Rockies
@@ -60,7 +61,8 @@ emissionFactors:
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
         value: 316.86
     unknown:
-      source: assumes 50% coal and 50% natural gas from Battle River dual fuel power plant
+      source: assumes 50% coal and 50% natural gas from Battle River dual fuel power
+        plant
       value: 655
 fallbackZoneMixes:
   powerOriginRatios:
@@ -184,8 +186,24 @@ fallbackZoneMixes:
         solar: 0.03183536456739056
         unknown: 0.024948048115312323
         wind: 0.14374665671413908
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2021-01-01'
+      value: 0.1578
+  unknown:
+    source: assumes 50% coal and 50% natural gas from Battle River dual fuel power
+      plant
+    value: 0
+isRenewable:
+  battery discharge:
+    - datetime: '2021-01-01'
+      value: 0.1577
+  unknown:
+    source: assumes 50% coal and 50% natural gas from Battle River dual fuel power
+      plant
+    value: 0
 parsers:
   gridAlerts: CA_AB.fetch_grid_alerts
   price: CA_AB.fetch_price
@@ -197,11 +215,3 @@ sources:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
 timezone: America/Edmonton
 zone_name: Alberta
-isRenewable:
-  unknown:
-    source: assumes 50% coal and 50% natural gas from Battle River dual fuel power plant
-    value: 0
-isLowCarbon:
-  unknown:
-    source: assumes 50% coal and 50% natural gas from Battle River dual fuel power plant
-    value: 0
