--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -149,15 +149,23 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.0
+    - datetime: '2021-01-01'
+      value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.0
+    - datetime: '2021-01-01'
+      value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
 parsers:
   consumption: ES.fetch_consumption
