--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -421,10 +421,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.6139
+    - datetime: '2021-01-01'
+      value: 0.5777
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4101
+    - datetime: '2021-01-01'
+      value: 0.3753
 parsers:
   consumption: ELEXON.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
