--- a/config/zones/GR.yaml
+++ b/config/zones/GR.yaml
@@ -472,10 +472,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2412
+    - datetime: '2021-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2131
+    - datetime: '2021-01-01'
+      value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
