--- a/config/zones/NO.yaml
+++ b/config/zones/NO.yaml
@@ -247,9 +247,13 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
