--- a/config/zones/PH-LU.yaml
+++ b/config/zones/PH-LU.yaml
@@ -257,16 +257,24 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.1354
+    - datetime: '2021-01-01'
+      value: 0.1302
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1124
+    - datetime: '2021-01-01'
+      value: 0.1069
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.1354
+    - datetime: '2021-01-01'
+      value: 0.1302
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1124
+    - datetime: '2021-01-01'
+      value: 0.1069
 parsers:
   production: IEMOP.fetch_production
 region: Asia
