--- a/config/zones/PH-VI.yaml
+++ b/config/zones/PH-VI.yaml
@@ -206,10 +206,14 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2874
+    - datetime: '2021-01-01'
+      value: 0.298
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2874
+    - datetime: '2021-01-01'
+      value: 0.298
 parsers:
   production: IEMOP.fetch_production
 region: Asia
