--- a/config/zones/PT.yaml
+++ b/config/zones/PT.yaml
@@ -512,10 +512,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.6331
+    - datetime: '2021-01-01'
+      value: 0.6908
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.576
+    - datetime: '2021-01-01'
+      value: 0.626
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
