--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -625,10 +625,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.5802
+    - datetime: '2021-01-01'
+      value: 0.7716
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.0712
+    - datetime: '2021-01-01'
+      value: 0.2827
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
