--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -1155,7 +1155,7 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 373.76
+        value: 373.92
       - _comment: used non-null storage values
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
@@ -1250,7 +1250,7 @@ emissionFactors:
       - _comment: used non-null storage values
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; National Laboratory of the Rockies
-        value: 406.76
+        value: 406.92
       - _comment: used non-null storage values
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; National Laboratory of the Rockies
@@ -1502,10 +1502,14 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.3997
+    - datetime: '2021-01-01'
+      value: 0.3904
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.0571
+    - datetime: '2021-01-01'
+      value: 0.0611
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: US_PJM.fetch_consumption_forecast
