--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -1206,10 +1206,14 @@ isLowCarbon:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.5393
+    - datetime: '2021-01-01'
+      value: 0.5179
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2936
+    - datetime: '2021-01-01'
+      value: 0.2755
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: US_NEISO.fetch_consumption_forecast
