--- a/config/zones/US-NW-PACW.yaml
+++ b/config/zones/US-NW-PACW.yaml
@@ -263,7 +263,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 395.79
+        value: 395.81
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -354,7 +354,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
-        value: 419.79
+        value: 419.81
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -519,10 +519,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.7924
+    - datetime: '2021-01-01'
+      value: 0.5025
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.762
+    - datetime: '2021-01-01'
+      value: 0.4888
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
