--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -345,7 +345,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 331.87
+        value: 332.71
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
@@ -456,7 +456,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
-        value: 355.87
+        value: 356.71
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; IPCC 2014
@@ -636,10 +636,14 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 0.5012
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 0.0288
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
